<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textOperator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textAlignment="center"
            android:gravity="center"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <EditText
                android:id="@+id/textInputOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="48sp"
                android:textColor="@android:color/black"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:padding="10dp"
                android:inputType="text"
                android:textIsSelectable="true"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/textInputTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="48sp"
                android:textColor="@android:color/black"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:padding="10dp"
                android:inputType="text"
                android:textIsSelectable="true"
                android:maxLines="1"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:textColor="@android:color/black"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:padding="10dp"
        android:inputType="text"
        android:textIsSelectable="true"
        android:cursorVisible="false"
        android:maxLines="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_add"
            android:textSize="60sp"
            android:textColor="@color/color_white"
            android:background="@drawable/button_dark"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/buttonSubtract"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_subtract"
            android:textSize="60sp"
            android:textColor="@color/color_white"
            android:background="@drawable/button_dark"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_multiply"
            android:textSize="60sp"
            android:textColor="@color/color_white"
            android:background="@drawable/button_dark"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_divide"
            android:textSize="60sp"
            android:textColor="@color/color_white"
            android:background="@drawable/button_dark"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/buttonNot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_not"
            android:textSize="60sp"
            android:textColor="@color/color_white"
            android:background="@drawable/button_dark"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/buttonAnd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_and"
            android:textSize="60sp"
            android:textColor="@color/color_white"
            android:background="@drawable/button_dark"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/buttonOr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_or"
            android:textSize="60sp"
            android:textColor="@color/color_white"
            android:background="@drawable/button_dark"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/buttonXor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_xor"
            android:textSize="60sp"
            android:textColor="@color/color_white"
            android:background="@drawable/button_dark"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonZero"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@drawable/button_light"
            android:text="@string/button_0"
            android:textColor="@color/color_white"
            android:textSize="46sp"/>

        <Button
            android:id="@+id/buttonOne"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@drawable/button_light"
            android:text="@string/button_1"
            android:textColor="@color/color_white"
            android:textSize="46sp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonDelete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_dark"
                android:text="@string/button_delete"
                android:textColor="@color/color_white"
                android:textSize="40sp"/>

            <Button
                android:id="@+id/buttonEquals"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/button_dark"
                android:text="@string/button_equals"
                android:textColor="@color/color_white"
                android:textSize="60sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
